--- a/index.html
+++ b/index.html
@@ -116,13 +116,11 @@ I have customized it to reflect my style and projects while experimenting with a
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Hello! My name is Bryce Blackwell, and among many other things, I am a Product Manager at Salesforce and Angel Investor in deep tech startups.
+              Hello! My name is Bryce Blackwell, and I'm a Product Manager at Salesforce, where I manage the Data Mask product to simplify data privacy compliance. I graduated from the University of Texas at Austin in 2021 with a degree in Business and Liberal Arts, which gave me a unique perspective on combining analytical and creative thinking. Currently, I'm enhancing my expertise with data analytics skills to drive even more impactful, data-driven decisions.
               
             </p>
             <p class="about-wrapper__info-text">
-               I graduated from the University of Texas at Austin with dual degrees from McCombs and Plan II, with a deep interest in data analytics, business strategy, and emerging technologies. Prior to Salesforce, I've worked for 5 different startups and have invested in 3 others while an Advisor at Arctype Ventures. 
-              
-              I created this page as a way to explore my passion and push myself in new ways through projects across domains as well as share a little more about myself. 
+            Outside of work, I'm an avid reader and love spending time outdoors, whether it’s hiking, running, or discovering new trails. I'm always looking to learn and grow—both professionally and personally. Thanks for stopping by my page!
             <span class="about-wrapper__cta">
               <a href="assets/resume.pdf" class="cta-btn cta-btn--resume" target="_blank">View Resume</a>
             </span>
