Update Profile Pic

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ I have customized it to reflect my style and projects while experimenting with a
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/close_profile.jpg"
+              src="./assets/profile.JPG"
               alt="Profile Image"
               width="450"
               height="350"
