--- a/index.html
+++ b/index.html
@@ -350,6 +350,28 @@ I have customized it to reflect my style and projects while experimenting with a
     </section>
     <!-- End Projects Section -->
 
+     <!-- Interests Section -->
+
+    <section id="interests">
+  <div class="container">
+    <h2 class="section-title">My Interests</h2>
+    <div class="photo-grid">
+      <img src="./assets/interest1.jpg" alt="Interest 1" class="photo-grid__item photo-grid__item--large">
+      <img src="./assets/interest2.jpg" alt="Interest 2" class="photo-grid__item">
+      <img src="./assets/interest3.jpg" alt="Interest 3" class="photo-grid__item photo-grid__item--tall">
+      <img src="./assets/interest4.jpg" alt="Interest 4" class="photo-grid__item">
+      <img src="./assets/interest5.jpg" alt="Interest 5" class="photo-grid__item photo-grid__item--wide">
+      <img src="./assets/interest6.jpg" alt="Interest 6" class="photo-grid__item">
+      <img src="./assets/interest7.jpg" alt="Interest 7" class="photo-grid__item photo-grid__item--large">
+      <img src="./assets/interest8.jpg" alt="Interest 8" class="photo-grid__item">
+      <!-- Add more images as needed -->
+    </div>
+  </div>
+</section>
+
+    <!-- End Interests Section -->
+
+
     <!-- Contact Section -->
     <!-- <section id="contact">
       <div class="container">
