Update photo section

--- a/index.html
+++ b/index.html
@@ -311,40 +311,6 @@ I have customized it to reflect my style and projects while experimenting with a
             </div>
           </article>
           <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <article class="row">
-            <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Multimodal Music Genre Classification</h3>
-              <p class="project-wrapper__text-info">
-                Combining song lyrics, audio spectrograms, and musical features together in a synthesized machine learning model to predict a song's genre.
-              </p>
-              <div class="project-wrapper__text-btns">
-                <a
-                  href="https://github.com/austin-chemelli/MultimodalGenreClassification"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
-                  >See on GitHub</a
-                >
-              </div>
-            </div>
-
-            <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <div class="thumbnail rounded">
-                  <img
-                    src="./assets/mm.png"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="1366"
-                    height="767"
-                  />
-                </div>
-              </a>
-            </div>
-          </article>
-          <!-- /END Project -->
         </div>
       </div>
     </section>
@@ -355,15 +321,16 @@ I have customized it to reflect my style and projects while experimenting with a
     <section id="interests">
   <div class="container">
     <h2 class="section-title">My Interests</h2>
+    <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
     <div class="photo-grid">
-      <img src="./assets/interest1.jpg" alt="Interest 1" class="photo-grid__item photo-grid__item--large">
-      <img src="./assets/interest2.jpg" alt="Interest 2" class="photo-grid__item">
-      <img src="./assets/interest3.jpg" alt="Interest 3" class="photo-grid__item photo-grid__item--tall">
-      <img src="./assets/interest4.jpg" alt="Interest 4" class="photo-grid__item">
-      <img src="./assets/interest5.jpg" alt="Interest 5" class="photo-grid__item photo-grid__item--wide">
-      <img src="./assets/interest6.jpg" alt="Interest 6" class="photo-grid__item">
-      <img src="./assets/interest7.jpg" alt="Interest 7" class="photo-grid__item photo-grid__item--large">
-      <img src="./assets/interest8.jpg" alt="Interest 8" class="photo-grid__item">
+      <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item photo-grid__item--large">
+      <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
+      <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item photo-grid__item--tall">
+      <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
+      <img src="./assets/Rowing.jpeg" alt="Rowing" class="photo-grid__item photo-grid__item--wide">
+      <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
+      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item photo-grid__item--large">
+      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
       <!-- Add more images as needed -->
     </div>
   </div>
