--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ I have customized it to reflect my style and projects while experimenting with a
         <p class="about-wrapper__info-text">
           Outside of work, I'm an avid reader and love spending time outdoors, whether it’s hiking, running, or discovering new trails. I'm always looking to learn and grow—both professionally and personally. Thanks for stopping by my page!
         </p>
+        <br>
         <p class="about-wrapper__cta">
           <a href="assets/resume.pdf" class="cta-btn cta-btn--resume" target="_blank">View Resume</a>
         </p>
@@ -195,77 +196,7 @@ I have customized it to reflect my style and projects while experimenting with a
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/query.png"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="1366"
-                    height="767"
-                  />
-                </div>
-              </a>
-            </div>
-          </article>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <article class="row">
-            <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Machine Learning for Stock Trading</h3>
-              <p class="project-wrapper__text-info">
-                Utilizing Machine Learning algorithms to understand and evaluate stock position strategies using technical indicators
-              </p>
-              <div class="project-wrapper__text-btns">
-                <a
-                  href="https://austin-chemelli.github.io/analyzing-financial-methods/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
-                  >See on GH Pages</a
-                >
-                
-              </div>
-            </div>
-
-            <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <div class="thumbnail rounded">
-                  <img
-                    src="./assets/trade.png"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="1366"
-                    height="767"
-                  />
-                </div>
-              </a>
-            </div>
-          </article>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <article class="row">
-            <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Neuromorphic Computing in OpenAIGym</h3>
-              <p class="project-wrapper__text-info">
-                Novel neuromorphic computing solutions for numerous OpenAI Gym environments.
-
-              </p>
-              <div class="project-wrapper__text-btns">
-                <a
-                  href="https://github.com/austin-chemelli/openaigym"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
-                  >See on GitHub</a
-                >
-              </div>
-            </div>
-
-            <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <div class="thumbnail rounded">
-                  <img
-                    src="./assets/cartpole.gif"
+                    src="./assets/Launch Vehicle Historical Analysis.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -322,15 +253,19 @@ I have customized it to reflect my style and projects while experimenting with a
   <div class="container">
     <h2 class="section-title">My Interests</h2>
     <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
+    <br>
     <div class="photo-grid">
       <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item photo-grid__item--large">
       <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
+      <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item">
       <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item photo-grid__item--tall">
       <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
-      <img src="./assets/Rowing.jpeg" alt="Rowing" class="photo-grid__item photo-grid__item--wide">
+      <img src="./assets/Rowing.jpg" alt="Rowing" class="photo-grid__item photo-grid__item--wide">
       <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
+      <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item">
       <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item photo-grid__item--large">
       <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
+      <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item">
       <!-- Add more images as needed -->
     </div>
   </div>
