--- a/index.html
+++ b/index.html
@@ -255,16 +255,16 @@ I have customized it to reflect my style and projects while experimenting with a
     <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
     <br>
     <div class="photo-grid">
-      <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item photo-grid__item--large">
+      <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item photo-grid__item--tall">
       <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
       <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item">
       <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item photo-grid__item--tall">
       <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
-      <img src="./assets/Rowing.jpg" alt="Rowing" class="photo-grid__item photo-grid__item--wide">
+      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item photo-grid__item--wide">
       <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
       <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item">
-      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item photo-grid__item--large">
-      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
+      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item photo-grid__item--tall">
+      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item--wide">
       <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item">
       <!-- Add more images as needed -->
     </div>
@@ -326,8 +326,8 @@ I have customized it to reflect my style and projects while experimenting with a
             href="https://github.com/AnilSeervi"
             target="_blank"
             rel="noopener noreferrer"
-            >Anil Seervi</a
-          >. <br /> Thanks for checking out my page &hearts;
+            >Devfolio</a
+          >. <br /> Thanks for checking out my page &#x1F64C;
         </p>
       </div>
     </footer>
