--- a/index.html
+++ b/index.html
@@ -247,9 +247,8 @@ I have customized it to reflect my style and projects while experimenting with a
     </section>
     <!-- End Projects Section -->
 
-     <!-- Interests Section -->
-
-    <section id="interests">
+<!-- Interests Section -->
+<section id="interests">
   <div class="container">
     <h2 class="section-title">My Interests</h2>
     <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
@@ -260,32 +259,45 @@ I have customized it to reflect my style and projects while experimenting with a
       <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item">
       <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item photo-grid__item--wide">
       <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
-      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item photo-grid__item--">
+      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item">
       <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
-      <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item--tall">
+      <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item photo-grid__item--tall">
       <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item">
-      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item photo-grid__item">
-      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item--wide">
-      <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid--large">
-      <!-- Add more images as needed -->
+      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item">
+      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item photo-grid__item--wide">
+      <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item photo-grid__item--large">
     </div>
   </div>
 </section>
+
 
     <!-- End Interests Section -->
 
 
     <!-- Contact Section -->
-    <!-- <section id="contact">
+    <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text"></p>
-          <a href="#" class="cta-btn cta-btn--resume">WHAT TO PUT HERE?</a>
+          <p class="contact-wrapper__text">Let's Connect!</p>
+           <a href="https://www.linkedin.com/in/bryceblackwell" target="_blank" class="cta-btn cta-btn--resume">LinkedIn</a>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- END Contact Section -->
+
+    <!-- Contact Section -->
+<section id="contact">
+  <div class="container">
+    <h2 class="section-title">Contact</h2>
+    <div class="contact-wrapper">
+      <p class="contact-wrapper__text">I’d love to connect with you! Feel free to reach out on LinkedIn.</p>
+      <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank" class="cta-btn cta-btn--resume">Connect on LinkedIn</a>
+    </div>
+  </div>
+</section>
+<!-- END Contact Section -->
+
 
     <!-- Footer Section -->
     <footer class="footer">
