--- a/index.html
+++ b/index.html
@@ -255,15 +255,15 @@ I have customized it to reflect my style and projects while experimenting with a
     <br>
     <div class="photo-grid">
       <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item photo-grid__item--large">
-      <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
-      <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item">
+      <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item photo-grid__item--regular">
+      <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item photo-grid__item--regular">
       <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item photo-grid__item--wide">
-      <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
-      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item">
-      <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
+      <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item photo-grid__item--regular">
+      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item photo-grid__item--regular">
+      <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item photo-grid__item--regular">
       <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item photo-grid__item--tall">
-      <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item">
-      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item">
+      <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item photo-grid__item--regular">
+      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item photo-grid__item--regular">
       <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item photo-grid__item--wide">
       <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item photo-grid__item--large">
     </div>
@@ -285,18 +285,6 @@ I have customized it to reflect my style and projects while experimenting with a
       </div>
     </section>
     <!-- END Contact Section -->
-
-    <!-- Contact Section -->
-<section id="contact">
-  <div class="container">
-    <h2 class="section-title">Contact</h2>
-    <div class="contact-wrapper">
-      <p class="contact-wrapper__text">I’d love to connect with you! Feel free to reach out on LinkedIn.</p>
-      <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank" class="cta-btn cta-btn--resume">Connect on LinkedIn</a>
-    </div>
-  </div>
-</section>
-<!-- END Contact Section -->
 
 
     <!-- Footer Section -->
