--- a/index.html
+++ b/index.html
@@ -254,22 +254,21 @@ I have customized it to reflect my style and projects while experimenting with a
     <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
     <br>
     <div class="photo-grid">
-      <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item photo-grid__item--large">
-      <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item photo-grid__item--regular">
-      <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item photo-grid__item--regular">
-      <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item photo-grid__item--wide">
-      <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item photo-grid__item--regular">
-      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item photo-grid__item--regular">
-      <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item photo-grid__item--regular">
-      <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item photo-grid__item--tall">
-      <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item photo-grid__item--regular">
-      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item photo-grid__item--regular">
-      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item photo-grid__item--wide">
-      <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item photo-grid__item--large">
+      <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item">
+      <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
+      <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item">
+      <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item">
+      <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
+      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item">
+      <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
+      <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item">
+      <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item">
+      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item">
+      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
+      <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item">
     </div>
   </div>
 </section>
-
 
     <!-- End Interests Section -->
 
@@ -293,7 +292,7 @@ I have customized it to reflect my style and projects while experimenting with a
         <a href="#hero" class="back-to-top" aria-label="go back to top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
-        <h3 class="footer__text">Connect with me!</h3>
+        <h3 class="footer__text">Contact Me</h3>
         <div class="social-links">
           <a
             href="mailto: bryceblackwell21@gmail.com"
