--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ I have customized it to reflect my style and projects while experimenting with a
 
 
     <!-- Contact Section -->
-    <section id="contact">
+   <!-- <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
@@ -280,7 +280,7 @@ I have customized it to reflect my style and projects while experimenting with a
            <a href="https://www.linkedin.com/in/bryceblackwell" target="_blank" class="cta-btn cta-btn--resume">LinkedIn</a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- END Contact Section -->
 
 
