--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@ I have customized it to reflect my style and projects while experimenting with a
 
 <!-- Interests Section -->
 <section id="interests">
-  <div class="container">
-    <h2 class="section-title">My Interests</h2>
-    <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
+  <div class="project-wrapper">
+    <h2 class="section-title dark-blue-text">My Interests</h2>
+    <p class="project-wrapper__text-info">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
     <br>
     <div class="photo-grid">
       <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item">
