--- a/index.html
+++ b/index.html
@@ -249,10 +249,9 @@ I have customized it to reflect my style and projects while experimenting with a
 
 <!-- Interests Section -->
 <section id="interests">
-  <div class="project-wrapper">
-    <h2 class="section-title dark-blue-text">My Interests</h2>
-    <p class="project-wrapper__text-info">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
-    <br>
+  <div class="container">
+    <h2 class="section-title">My Interests</h2>
+    <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
     <div class="photo-grid">
       <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item">
       <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
@@ -263,10 +262,13 @@ I have customized it to reflect my style and projects while experimenting with a
       <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
       <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item">
       <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item">
+      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item">
       <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
+      <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item">
     </div>
   </div>
 </section>
+
 
     <!-- End Interests Section -->
 
