--- a/index.html
+++ b/index.html
@@ -250,8 +250,9 @@ I have customized it to reflect my style and projects while experimenting with a
 <!-- Interests Section -->
 <section id="interests">
   <div class="container">
+    <br>
     <h2 class="section-title">My Interests</h2>
-    <p class="section-subtitle">A glimpse into what I love to do outside of work, namely get outdoors and read Sci-Fi!</p>
+    <p class="section-subtitle">A glimpse into what I love to do outside of work, namely getting outdoors and reading Sci-Fi!</p>
     <div class="photo-grid">
       <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item">
       <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
@@ -262,9 +263,7 @@ I have customized it to reflect my style and projects while experimenting with a
       <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
       <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item">
       <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item">
-      <img src="./assets/Library.jpeg" alt="Reading" class="photo-grid__item">
       <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
-      <img src="./assets/Traveling.jpeg" alt="Travel" class="photo-grid__item">
     </div>
   </div>
 </section>
@@ -321,13 +320,7 @@ I have customized it to reflect my style and projects while experimenting with a
         </div>
         <hr />
         <p class="footer__text">
-          &copy; <span id="year"></span> - Inspired by
-          <a
-            href="https://github.com/AnilSeervi"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Devfolio</a
-          >. <br /> Thanks for checking out my page &#x1F64C;
+          &copy; <span id="year"></span> - Thanks for checking out my page &#x1F64C;
         </p>
       </div>
     </footer>
