--- a/index.html
+++ b/index.html
@@ -250,22 +250,25 @@ I have customized it to reflect my style and projects while experimenting with a
 <!-- Interests Section -->
 <section id="interests">
   <div class="container">
-    <h2 class="section-title">My Interests</h2>
-    <p class="section-subtitle">A glimpse into what I love to do outside of work, namely getting outdoors and reading Sci-Fi!</p>
-    <div class="photo-grid">
-      <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item">
-      <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
-      <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item">
-      <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item">
-      <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
-      <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item">
-      <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
-      <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item">
-      <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item">
-      <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
+    <div class="interests-wrapper">
+      <h2 class="section-title dark-blue-text">My Interests</h2>
+      <p class="section-subtitle dark-blue-text">A glimpse into what I love to do outside of work, namely getting outdoors and reading Sci-Fi!</p>
+      <div class="photo-grid">
+        <img src="./assets/Golf.jpeg" alt="Golf" class="photo-grid__item">
+        <img src="./assets/Dirtbiking.jpeg" alt="Dirtbiking" class="photo-grid__item">
+        <img src="./assets/Reading.JPG" alt="Reading" class="photo-grid__item">
+        <img src="./assets/Skiing.jpeg" alt="Skiing" class="photo-grid__item">
+        <img src="./assets/Paddleboarding.jpeg" alt="Paddleboarding" class="photo-grid__item">
+        <img src="./assets/Rowing.JPG" alt="Rowing" class="photo-grid__item">
+        <img src="./assets/Yellowstone.jpeg" alt="Exploration" class="photo-grid__item">
+        <img src="./assets/Running.JPG" alt="Running" class="photo-grid__item">
+        <img src="./assets/Kiteboarding.JPG" alt="Travel" class="photo-grid__item">
+        <img src="./assets/Hiking.jpeg" alt="Hiking" class="photo-grid__item">
+      </div>
     </div>
   </div>
 </section>
+
 
 
     <!-- End Interests Section -->
